<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0c0c0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Authentication" >

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Login_button"
        android:layout_alignRight="@+id/Login_button"
         android:layout_above="@+id/button_about"
        android:layout_marginBottom="10dp"
        android:text="@string/register" />
    
    
    <Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Login_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Login_button"
        android:layout_marginBottom="5dp"
        android:text="@string/About" />

    <EditText
        android:id="@+id/autoCompleteTextView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteTextView_username"
        android:layout_below="@+id/autoCompleteTextView_username"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignRight="@+id/autoCompleteTextView_username"
        android:layout_above="@+id/register_button"
        android:layout_marginBottom="10dp"
        android:text="@string/login" />

    <ImageButton
        android:id="@+id/imageButtonclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_password"
        android:layout_toRightOf="@+id/autoCompleteTextView_username"
        android:background="#c0c0c0"
        android:contentDescription="@string/Clear"
        android:src="@drawable/x" />

    <CheckBox
        android:id="@+id/checkBox_savepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="39dp"
        android:hint="@string/save_password"
        android:text="@string/save_password" />

    <CheckBox
        android:id="@+id/checkBox_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox_savepassword"
        android:layout_toRightOf="@+id/checkBox_savepassword"
        android:text="@string/autologin"
        android:textSize="12sp" />

</RelativeLayout>