<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#7D7D7D">

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:layout_margin="10dip"
        android:background="@drawable/stroke"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:scaleType="fitXY"
        android:verticalSpacing="10dp" >
    </GridView>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/new_course"/>
	    <LinearLayout 
			    android:layout_width="fill_parent"  
			    android:layout_height="fill_parent"  
			    android:orientation="horizontal" > 
			    <Button
			        android:id="@+id/button2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="6dp"
			        android:text="@string/logout" />
			
			    <Button
			        android:id="@+id/button_exit"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginRight="6dp"
			        android:text="@string/Exit" />
		</LinearLayout>
</LinearLayout>